plugins {
  id 'java-library'
}

group = 'com.pholser.annogami'
version = '1.0.0-SNAPSHOT'

repositories {
  mavenCentral()
}

dependencies {
  testImplementation platform("org.junit:junit-bom:6.0.1")
  testImplementation 'org.junit.jupiter:junit-jupiter'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  testImplementation 'org.assertj:assertj-core:3.27.6'
}

tasks.withType(JavaCompile).configureEach {
  options.encoding = 'UTF-8'
  options.release = 17
}

test {
  useJUnitPlatform()
}
